# Slam_Solver

./: .gitignore  CMakeLists.txt  README.md  remake_win.sh  run.sh
logs/: 20231203_逆深度优化比三维点慢.txt
src/general_graph_optimizor/: CMakeLists.txt  edge.cpp  edge.h  general_graph_optimizor.h  jet.h  kernel.h  utils.cpp  vertex.cpp  vertex.h
src/general_graph_optimizor/edge/: CMakeLists.txt  edge.cpp  edge.h  edge_auto_diff.h
src/general_graph_optimizor/graph/: CMakeLists.txt  graph.cpp  graph.h
src/general_graph_optimizor/kernel/: CMakeLists.txt  kernel.h  kernel_cauchy.h  kernel_huber.h  kernel_trival.h  kernel_tukey.h
src/general_graph_optimizor/marginalizor/: CMakeLists.txt  marginalizor.cpp  marginalizor.h
src/general_graph_optimizor/optimizor/: CMakeLists.txt  solver.cpp  solver.h  solver_dogleg.cpp  solver_dogleg.h  solver_gd.cpp  solver_gd.h  solver_gn.cpp  solver_gn.h  solver_lm.cpp  solver_lm.h
src/general_graph_optimizor/vertex/: CMakeLists.txt  vertex.cpp  vertex.h  vertex_quaternion.h  vertex_so3.h
src/kalman_filter/: CMakeLists.txt  error_kalman_filter.cpp  error_kalman_filter.h  filter.h  kalman_filter.cpp  kalman_filter.h
src/kalman_filter/error_kalman_filter/: CMakeLists.txt  error_kalman_filter.cpp  error_kalman_filter.h
src/kalman_filter/kalman_filter/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.h
src/kalman_filter/square_root_kalman_filter/: CMakeLists.txt  square_root_kalman_filter.cpp  square_root_kalman_filter.h
src/polynomial_solver/: CMakeLists.txt  polynomial_solver.cpp  polynomial_solver.h
src/pose_graph_optimizor/: CMakeLists.txt  pose_graph_optimizor.cpp  pose_graph_optimizor.h
src/state_filter/: filter.h  inverse_filter.h
src/state_filter/error_information_filter/: CMakeLists.txt  error_information_filter.cpp  error_information_filter.h
src/state_filter/error_kalman_filter/: CMakeLists.txt  error_kalman_filter.cpp  error_kalman_filter.h
src/state_filter/information_filter/: CMakeLists.txt  information_filter.cpp  information_filter.h
src/state_filter/kalman_filter/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.h
src/state_filter/square_root_information_filter/: CMakeLists.txt  square_root_information_filter.cpp  square_root_information_filter.h
src/state_filter/square_root_kalman_filter/: CMakeLists.txt  square_root_kalman_filter.cpp  square_root_kalman_filter.h
test/: embeded_add_invdep_vertices_of_BA.h  embeded_add_kernel.h  embeded_add_pos_vertices_of_BA.h  embeded_add_vertices_of_BA.h  embeded_generate_sim_data.h  embeded_show_optimize_result.h  test_general_graph_optimizor.cpp  test_general_graph_optimizor_bundle_adjustment.cpp  test_general_graph_optimizor_invdep_norm_plane_BA.cpp  test_general_graph_optimizor_invdep_norm_plane_BA_autodiff.cpp  test_general_graph_optimizor_invdep_one_cam_two_frame.cpp  test_general_graph_optimizor_invdep_unit_sphere_BA.cpp  test_general_graph_optimizor_line_BA.cpp  test_general_graph_optimizor_marginalization.cpp  test_general_graph_optimizor_norm_plane_BA.cpp  test_general_graph_optimizor_polynomial_problem.cpp  test_general_graph_optimizor_pos_norm_plane_BA.cpp  test_general_graph_optimizor_pos_unit_sphere_BA.cpp  test_general_graph_optimizor_unit_sphere_BA.cpp  test_kalman_filter.cpp  test_kalman_filter_constant.cpp  test_kalman_filter_imu_attitude.cpp  test_pose_graph_optimizor.cpp  test_prior_operation.cpp  test_state_filter_consistency.cpp  test_state_filter_constant.cpp  test_state_filter_imu_attitude.cpp
